feat: Pie chart added
- updated data service
- dynamic pie chart rendering

--- a/angular.json
+++ b/angular.json
@@ -104,5 +104,8 @@
       }
     }
   },
-  "defaultProject": "InterviewProject"
+  "defaultProject": "InterviewProject",
+  "cli": {
+    "analytics": false
+  }
 }
